Add: new Codeforces solutions for problems 200B, 433B, 1208A, 1325A, 1409A, 1743B, and 1747A; add SPOJ solution for INTEST

--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,11 @@ outputf.in
 codeforce/*
 practice-contest/*
 problem-solving-YKW-cpp/*
+spoj/*
 !codeforce/*.cpp
-!codeforce/*.in
 !practice-contest/*.cpp
-!practice-contest/*.in
 !problem-solving-YKW-cpp/*.cpp
-!problem-solving-YKW-cpp/*.in
+!spoj/*.cpp
 
 # Ignore backup files (optional)
 *.swp
