Add: new Codeforces solutions for problems 472A, 762A, 1294C, 1601A, and CSES task 1713

--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,17 @@ practice-contest/*
 problem-solving-YKW-cpp/*
 spoj/*
 hackerrank/*
+cses/*
 !codeforce/*.cpp
 !practice-contest/*.cpp
 !problem-solving-YKW-cpp/*.cpp
 !spoj/*.cpp
 !hackerrank/*.cpp
+!cses/*.cpp
+
 test-contest/*
+icpc/*
+random/*
 
 
 # Ignore backup files (optional)
