Add: new solutions for AtCoder problems abc071_b, abc121_d, abc156_b, abc162_c, abc182_b, and arc088_a; update .gitignore to include AtCoder directory

--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,14 @@ problem-solving-YKW-cpp/*
 spoj/*
 hackerrank/*
 cses/*
+atcoder/*
 !codeforce/*.cpp
 !practice-contest/*.cpp
 !problem-solving-YKW-cpp/*.cpp
 !spoj/*.cpp
 !hackerrank/*.cpp
 !cses/*.cpp
+!atcoder/*.cpp
 
 test-contest/*
 icpc/*
